--- a/src/app/solution-list/solution-list.component.css
+++ b/src/app/solution-list/solution-list.component.css
@@ -26,18 +26,12 @@
 
 /* עבור קונטיינר של כל הפתרונות */
 .solutions-container {
-    gap: 30px;
-    max-width: 1200px;
-    margin: 0 auto; /* ממקם את התוכן במרכז */
-    justify-items: center; /* ממקם את הכרטיסים במרכז */
     display: flex;
-    justify-content: center;
-}
-
-/* עבור כרטיס הפתרון */
-.solution-card-container {
-    display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-left: 7%;
+    margin-right: 7%;
+    gap: 3%;
     align-items: center;
 }
 
@@ -50,7 +44,7 @@
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     background-color: #34495e;
     color: rgb(40, 1, 40);
-    margin: 2%;
+    margin-bottom: 6%;
 }
 
 /* אפקט על-hover */
@@ -97,31 +91,10 @@
     border: none;
 }
 
-/* כפתור Copy Code */
-.copy-btn {
-    font-weight: bold;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    border-radius: 50%;
-    padding: 8px;
-    transition: transform 0.3s ease, background 0.5s ease;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: linear-gradient(135deg, #082a65, #9e1599);
-    border: none;
-}
-
 /* אייקון של ה-Copy */
 .copy-btn mat-icon {
     font-size: 1.4em;
     color: white;
-}
-
-/* אייקון של וי אחרי העתקה */
-.copy-btn .check_circle {
-    color: #f8f8f8;
 }
 
 /* הודעה לאחר ההעתקה */
@@ -139,6 +112,23 @@
     animation: fadeIn 0.5s forwards;
 }
 
+.back-button {
+    background: none;
+    border: none;
+    padding: 0;
+    color: white;
+    font-size: 24px;
+    position: fixed;
+    top: 15%;
+    left: 5%;
+    z-index: 1000;
+    cursor: pointer;
+}
+
+.back-button mat-icon {
+    color: white;
+}
+
 @keyframes fadeIn {
     to {
         opacity: 1;
@@ -147,31 +137,37 @@
 
 /* רספונסיביות - צמצום שורות במסכים קטנים יותר */
 @media (max-width: 768px) {
+    .solutions-container {
+        display: flex;
+        flex-direction: column;
+        gap: 3%; /* רווח בין כרטיסים */
+        align-items: center;
+    }
+
+    .solution-card {
+        width: 300px;
+        height: auto;
+        margin-bottom: 5%;
+    }
+
     .title {
         margin-top: 20%;
     }
-    .solutions-container {
-display: flex;  
-flex-direction: column;
-  }
-  .solutions-btn{
-    width: 10%;
-  }
 }
 
-/* פתרון אם יש בדיוק שני כרטיסים */
+/* פתרון אם יש בדיוק שני כרטיסים בטאבלט */
 @media (min-width: 768px) and (max-width: 1200px) {
     .solutions-container {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 30px;
-        
+            gap: 3%; /* רווחים בין כרטיסים */
     }
+
+    .solution-card {
+        margin-bottom: 5%;
+        width: 300px;
+
+    }
+
     .title {
         margin-top: 10%;
-    }
-    .solution-card-container {
-        width: 45%; /* אם יש רק שני פתרונות */
     }
 }
